Fixes poster page on iOS Safari

--- a/style/app.css
+++ b/style/app.css
@@ -170,6 +170,7 @@ button {
   display: inline-flex;
   justify-content: center;
   align-items: center;
+  flex-shrink: 0;
   border: none;
   white-space: nowrap;
   user-select: none;
@@ -1142,6 +1143,10 @@ input[type="checkbox"]:checked + div .switch::before {
   border-radius: 999rem;
   margin: 4.8rem 0;
   height: 4.8rem;
+}
+
+.poster .scroll > * {
+  flex-shrink: 0;
 }
 
 @media (min-width: 800px) {
